syntax = "proto3";

package order_provider;

service OrderProvider {
  rpc GetOrderById(GetByIdRequest) returns (GetByIdReply) {}
  rpc GetManyOrders(GetManyRequest) returns (GetManyReply) {}
}

message GetByIdRequest{
  string order_id = 1;
}

message GetByIdReply {
  Order order = 1;
}

message GetManyRequest{
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetManyReply {
  int32 total_page = 1;
  int32 total_items = 2;
  repeated Order orders = 3;
}

message Order {
  string id = 1;
  string item = 2;
  int32 quantity = 3;
  string merchant_id = 4;
  string customer_id = 5;
}